--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,16 @@ jobs:
           node-version: 20
       
       - name: Install Angular CLI
-        run: npm install @angular/cli
+        run: npm install -g @angular/cli
       
       - name: Install Dependencies
         run: npm install
 
       - name: Run Tests
-        run: ng test --watch=false --browsers=ChromeHeadless
+        run: npm test --watch=false --browsers=ChromeHeadless
       
       - name: Build
-        run: ng build --prod
+        run: npm build --prod
 
       - name: Deploy to GitHubPages
         run: |
