--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: npm test --watch=false --browsers=ChromeHeadless
+        run: npm testprod
       
       - name: Build
-        run: npm build --prod
+        run: npm buildprod
 
       - name: Deploy to GitHubPages
         run: |
