--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "buildprod": "ng build --prod",
+    "testprod": "ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": false,
   "dependencies": {
