--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: npm testprod
+        run: npm run testprod
       
       - name: Build
-        run: npm buildprod
+        run: npm run buildprod
 
       - name: Deploy to GitHubPages
         run: |
