--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "buildprod": "ng build --prod",
+    "buildprod": "ng build --configuration=production",
     "testprod": "ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": false,
