--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
           cd dist/angular-dog-display-01
 
+          mv ./3rdpartylicenses.txt ./browser/
+
+          cd browser
+
           git init
 
           git config user.name = "${{ github.actor }}"
